package app.entities;

public class Bottom {
    private String name;
    private int price;

    public Bottom(String name, int price) {
        this.name = name;
        this.price = price;
    }

    // Getters og Setters
    public String getName() {
        return name;
    }

    public void setName(String name) {
        this.name = name;
    }

    public int getPrice() {
        return price;
    }

    public void setPrice(int price) {
        this.price = price;
    }

    @Override
    public String toString() {
        return "Bottom{" +
                "name='" + name + '\'' +
                ", price=" + price +
                '}';
    }
}